# Projet-Annuel-Ann-e-3

./: .gitignore  CMakeLists.txt  README.md
src/: LinearModel.cpp  LinearModel.hpp
wrapper/: binding.cpp
